--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <a href="http://" class="nav">Über <wbr /> uns</a>
+      <a href="http://" class="nav">Öffnungs<wbr />zeiten</a>
+      <a href="http://" class="nav">Speise<wbr />karte</a>
+    </nav>
     <section class="hero">
-      <h1 class="title">Pizzeria Mamma Mia</h1>
+      <h1 class="title">
+        Pizzeria <br />
+        Mamma Mia
+      </h1>
       <p class="subtitle">Original italienische Küche aus der Toskana</p>
       <a href="#open" class="hero-button">Öffnungszeiten ansehen</a>
     </section>
