--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <nav>
-      <a href="http://" class="nav">Über <wbr /> uns</a>
-      <a href="http://" class="nav">Öffnungs<wbr />zeiten</a>
-      <a href="http://" class="nav">Speise<wbr />karte</a>
+      <a href="about" class="nav">Über <wbr /> uns</a>
+      <a href="#" class="nav">Öffnungs<wbr />zeiten</a>
+      <a href="#" class="nav">Speise<wbr />karte</a>
     </nav>
     <section class="hero">
       <h1 class="title">
@@ -18,7 +18,25 @@
         Mamma Mia
       </h1>
       <p class="subtitle">Original italienische Küche aus der Toskana</p>
-      <a href="#open" class="hero-button">Öffnungszeiten ansehen</a>
+      <a href="#open" class="hero-button button">Öffnungszeiten ansehen</a>
+    </section>
+    <section class="about container" id="about">
+      <h2 class="heading">Über uns</h2>
+      <p class="about-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere in
+        voluptatum iste eum repudiandae aspernatur sint eveniet perspiciatis
+        voluptates nihil, possimus maiores ex inventore harum! Fugit temporibus
+        nobis in culpa iusto qui sapiente quisquam unde veniam, vel deserunt
+        eligendi nostrum facilis voluptates ducimus necessitatibus illum
+        repellat natus quaerat eos officiis ad, quae inventore voluptas. Nihil,
+        aspernatur! <br /><br />Perferendis illo mollitia sit ea voluptates
+        dolorem, porro, dignissimos culpa fugiat earum asperiores ut ipsam,
+        repellendus velit fuga! Consectetur, modi eveniet quod tempora numquam
+        eum. Quibusdam accusamus, dolores voluptatem consequatur assumenda
+        tempora, itaque sunt maiores quasi cupiditate alias qui adipisci
+        similique possimus quo magni!
+      </p>
+      <a href="#" class="about-button button">Zur Speisekarte</a>
     </section>
     <div class="test"></div>
   </body>
