--- a/index.html
+++ b/index.html
@@ -20,24 +20,107 @@
       <p class="subtitle">Original italienische Küche aus der Toskana</p>
       <a href="#open" class="hero-button button">Öffnungszeiten ansehen</a>
     </section>
-    <section class="about container" id="about">
-      <h2 class="heading">Über uns</h2>
-      <p class="about-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere in
-        voluptatum iste eum repudiandae aspernatur sint eveniet perspiciatis
-        voluptates nihil, possimus maiores ex inventore harum! Fugit temporibus
-        nobis in culpa iusto qui sapiente quisquam unde veniam, vel deserunt
-        eligendi nostrum facilis voluptates ducimus necessitatibus illum
-        repellat natus quaerat eos officiis ad, quae inventore voluptas. Nihil,
-        aspernatur! <br /><br />Perferendis illo mollitia sit ea voluptates
-        dolorem, porro, dignissimos culpa fugiat earum asperiores ut ipsam,
-        repellendus velit fuga! Consectetur, modi eveniet quod tempora numquam
-        eum. Quibusdam accusamus, dolores voluptatem consequatur assumenda
-        tempora, itaque sunt maiores quasi cupiditate alias qui adipisci
-        similique possimus quo magni!
-      </p>
-      <a href="#" class="about-button button">Zur Speisekarte</a>
+    <section id="about" class="about container">
+      <div class="about-content">
+        <h2 class="heading">Über Uns</h2>
+        <p class="about-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+          numquam est expedita, architecto eligendi neque inventore
+          necessitatibus nobis quam nostrum tempora incidunt cumque repudiandae
+          consectetur.
+          <br /><br />
+          Distinctio excepturi adipisci aliquid doloribus quasi dicta laboriosam
+          temporibus? Provident ducimus vel magnam facere, dignissimos quod
+          velit necessitatibus ipsum. Ad fugit architecto, reprehenderit rerum
+          molestias eum ipsa quia esse itaque minus voluptatem, neque pariatur
+          voluptatum!
+        </p>
+        <a href="#" class="button about-action">Zur Speisekarte</a>
+      </div>
+      <div class="about-images">
+        <img
+          class="about-image about-image-large"
+          src="./images/about-1.jpg"
+          alt="Trattoria Mamma Mia Eingang"
+        />
+        <div class="about-images-small">
+          <img
+            class="about-image"
+            src="./images/about-2.jpg"
+            alt="Trattoria Mamma Mia Reservierung"
+          />
+          <img
+            class="about-image"
+            src="./images/about-3.jpg"
+            alt="Trattoria Mamma Mia Pizza"
+          />
+        </div>
+      </div>
     </section>
-    <div class="test"></div>
+    <section id="info" class="info-wrapper">
+      <div class="info container">
+        <h2 class="heading">Öffnungszeiten</h2>
+        <div class="hours">
+          <p class="hours-entry">
+            <span class="days">Mo.</span>
+            <span class="time">Ruhetag</span>
+          </p>
+          <p class="hours-entry">
+            <span class="days">Di.</span>
+            <span class="time">11:00 - 23:00</span>
+          </p>
+          <p class="hours-entry">
+            <span class="days">Mi.</span>
+            <span class="time">11:00 - 23:00</span>
+          </p>
+          <p class="hours-entry">
+            <span class="days">Do.</span>
+            <span class="time">11:00 - 23:00</span>
+          </p>
+          <p class="hours-entry">
+            <span class="days">Fr.</span>
+            <span class="time">11:00 - 01:00</span>
+          </p>
+          <p class="hours-entry">
+            <span class="days">Sa.</span>
+            <span class="time">11:00 - 02:00</span>
+          </p>
+          <p class="hours-entry">
+            <span class="days">So.</span>
+            <span class="time">11:00 - 23:00</span>
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="contact container">
+      <div class="contact-content">
+        <img
+          src="./images/contact.jpg"
+          alt="Herzlich Willkomen im Mamma Mia"
+          class="contact-image"
+        />
+        <div class="contact-details">
+          <h2 class="heading">Kontakt</h2>
+          <p class="contact-detail">(0) 123 456789</p>
+          <p class="contact-detail">info@pizza.de</p>
+          <p class="contact-detail">Pizzaweg 11</p>
+          <p class="contact-detail">12345 Pizzahausen</p>
+          <div class="contact-action">
+            <a href="tel:0123456" class="button">Jetzt anrufen!</a>
+            <a href="mailto:info@pizza.de" class="button-inverted"
+              >Mail an uns</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-links">
+        <a href="#" class="footer-item">Impressum</a
+        ><a href="#" class="footer-item">Datenschutzerklärung</a
+        ><a href="#" class="footer-item">Jobs</a>
+      </div>
+      <p class="footer-copyright">&copy; 2023 Andreas Harms</p>
+    </footer>
   </body>
 </html>
