--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <a href="about" class="nav">Über <wbr /> uns</a>
       <a href="#" class="nav">Öffnungs<wbr />zeiten</a>
-      <a href="#" class="nav">Speise<wbr />karte</a>
+      <a href="speisekarte.html" class="nav">Speise<wbr />karte</a>
     </nav>
     <section class="hero">
       <h1 class="title">
@@ -35,7 +35,9 @@
           molestias eum ipsa quia esse itaque minus voluptatem, neque pariatur
           voluptatum!
         </p>
-        <a href="#" class="button about-action">Zur Speisekarte</a>
+        <a href="speisekarte.html" class="button about-action"
+          >Zur Speisekarte</a
+        >
       </div>
       <div class="about-images">
         <img
